crates/runtime/src/dataaccelerator/partitioned_duckdb/tables_mode/snapshots/runtime__dataaccelerator__partitioned_duckdb__tables_mode__tests__filter_nonexistent_explain.snap
---
source: crates/runtime/src/dataaccelerator/partitioned_duckdb/tables_mode/mod.rs
expression: explain_pretty
---
+---------------+--------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                   |
+---------------+--------------------------------------------------------------------------------------------------------+
| logical_plan  | TableScan: test_table projection=[id, region], full_filters=[test_table.region = Utf8("eu-central-1")] |
| physical_plan | EmptyExec                                                                                              |
|               |                                                                                                        |
+---------------+--------------------------------------------------------------------------------------------------------+
