crates/runtime/src/dataaccelerator/partitioned_duckdb/tables_mode/snapshots/runtime__dataaccelerator__partitioned_duckdb__tables_mode__tests__filter_us_east_result.snap
---
source: crates/runtime/src/dataaccelerator/partitioned_duckdb/tables_mode/mod.rs
expression: result_pretty
---
+----+-----------+
| id | region    |
+----+-----------+
| 1  | us-east-1 |
| 3  | us-east-1 |
+----+-----------+
